added more to homepage.html

--- a/static/homePage.html
+++ b/static/homePage.html
@@ -3,18 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/homePage.css" />
+    <link rel="stylesheet" href="/css/homePage.css"/>
     <title>Main</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel ="stylesheet" href = "/css/homePage.css">
 </head>
 <body>
-    <div class="nav">
-        <a href="#put-ID-here">nameId</a>
-    </div>
+    <h1>Financial Literacy</h1>
+    <p>Know how to handle your money</p>
+    <button>Get Started</button>
+    <br>
 
-    <h1>Hello Chat</h1>
-    <p>this is a project idea</p>
+    <div class="container text-center">
+        <div class="row">
+          <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Budgeting
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">How to Budget</h5>
+                  <p class="card-text">Calculator on your own personal<br><i><b>income</b></i> and <i><b>saving goals</b></i>.</p>
+
+                  <button href="./budgetingMethods.html"  type="button" id="budg-btn">Save me money!😊</button>
+                </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card">
+                <div class="card-header">
+                    Investing
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">How to Invest</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="./budgetingMethods.html">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+          <div class="col">
+            <div class="card">
+                <div class="card-header">
+                  Featured
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="./budgetingMethods.html">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+        </div>
+    </div>
+    
+    
 </body>
 </html>
