--- a/static/homePage.html
+++ b/static/homePage.html
@@ -13,9 +13,12 @@
 <body>
     <h1>Financial Literacy</h1>
     <p>Know how to handle your money</p>
-    <button>Get Started</button>
     <br>
-
+    <form action="/action_page.php">
+      <label for="fname">hr rate</label><br>
+      <input type="text" id="fname" value="$per-hr"><br><br>
+      <input type="submit" value="Submit">
+    </form>
     <div class="container text-center">
         <div class="row">
           <div class="col">
@@ -56,8 +59,6 @@
               </div>
           </div>
         </div>
-    </div>
-    
-    
+    </div>    
 </body>
 </html>
