--- a/static/Budgeting.html
+++ b/static/Budgeting.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <h1>Budgeting</h1>
-    <img src="https://media.istockphoto.com/id/165802164/vector/money-tree-in-hands.jpg?s=612x612&w=0&k=20&c=qi9gLuSqIGd1xT8kf-rNsponKXTJ-m16Axv4dKBu3cM=" class="centered-image">
-    
+    <div class="greenborder" id="div1" >
+        <img id = "img1" src="https://media.istockphoto.com/id/165802164/vector/money-tree-in-hands.jpg?s=612x612&w=0&k=20&c=qi9gLuSqIGd1xT8kf-rNsponKXTJ-m16Axv4dKBu3cM=" class="centered-image">
+    </div1>
+   <div class="greenborder">
     <P1>PayCheck after deducted taxes: </P1>
 
     <form action="/action_page.php">
@@ -23,7 +25,8 @@
          calculated wants
          calculated savings
     -->
-    <div>
+    </div>
+    <div class="greenborder">
         <p>Needs: </p>
 
         <p>Wants: </p>
@@ -33,6 +36,8 @@
     </div>
     
 
-
+ <div class="greenborder">
+    <p>fhedsb</p>
+ </div>
 
 </body>
