--- a/static/homePage.html
+++ b/static/homePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/homePage.css"/>
-    <title>Main</title>
+    <title>Finace Calculator💸</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -28,37 +28,39 @@
           <div class="col">
             <div class="card">
                 <div class="card-header">
+                  <div class="colored">
                     Budgeting
+                  </div>
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">How to Budget</h5>
                   <p class="card-text">Calculator on your own personal<br><i><b>income</b></i> and <i><b>saving goals</b></i>.</p>
 
-                  <button href="./budgetingMethods.html"  type="button" id="budg-btn">Save me money!😊</button>
+                  <a class="btn btn-primary" href="/static/Budgeting.html" role="button">Save me money!😊</a>
                 </div>
               </div>
           </div>
           <div class="col">
             <div class="card">
-                <div class="card-header">
-                    Investing
+                <div class="card-header" class="colored">
+                    Credit Information
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">How to Invest</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="./budgetingMethods.html">Go somewhere</a>
+                  <h5 class="card-title">Calculate your credit</h5>
+                  <p class="card-text">fgsgssg fgdfsgnj ksnjkngsgsd.</p>
+                  <a class="btn btn-primary" href="/static/Credit_Info.html" role="button">Lets Go!😎</a>
                 </div>
               </div>
           </div>
           <div class="col">
             <div class="card">
-                <div class="card-header">
-                  Featured
+                <div class="card-header" class="colored">
+                  Finance Tips
                 </div>
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
+                <div class="card-body" >
+                  <h5 class="card-title">Finance terminology</h5>
                   <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                  <a href="./budgetingMethods.html">Go somewhere</a>
+                  <a class="btn btn-primary" href="/static/Finance_Tips.html" role="button">Know More!🧠</a>
                 </div>
               </div>
           </div>
