--- a/static/Budgeting.html
+++ b/static/Budgeting.html
@@ -43,20 +43,71 @@
     </div>
     
 
- <div class="greenborder">
-    <p>Needs</p>
-    <label for ="numberInput1">Housing:</label>
-    <input type="number" id="numberInput1" placeholder="Enter a number">
-    <label for ="numberInput2">Transportation:</label>
-    <input type="number" id="numberInput2" placeholder="Enter a number">
-    <label for ="numberInput3">Groceries:</label>
-    <input type="number" id="numberInput3" placeholder="Enter a number">
-    <label for ="numberInput4">Enter a number:</label>
-    <input type="number" id="numberInput4" placeholder="Enter a number">
-
-    <button onclick="calculateAll()">Done!</button>  <!-- Button to trigger the calculation -->
 
 
- </div>
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col">
+                    <div class="card">
+                        <div class="card-header">
+                          <div class="colored">
+                            Essentials
+                          </div>
+                        </div>
+                        <div class="card-body">
+                          <h2 class="card-title">Need Budget</h2>
+                          <p class="card-text">Calculator on your own personal<br><i><b>income</b></i> and <i><b>saving goals</b></i>.</p>
+                        </div>
+                      </div>
+                  </div>
 
+                  <div class="col">
+                    <div class="card">
+                        <div class="card-header" class="colored">
+                            Fun Money 
+                        </div>
+                        <div class="card-body">
+                          <h2 class="card-title">Wants Budget</h2>
+                          <p class="card-text">fgsgssg fgdfsgnj ksnjkngsgsd.</p>
+                        </div>
+                      </div>
+                  </div>
+
+                  <div class="col">
+                    <div class="card">
+                        <div class="card-header" class="colored">
+                          Savings 
+                        </div>
+                        <div class="card-body" >
+                          <h2 class="card-title">Savings Budget</h2>
+                          <p class="card-text">This is the money that can be put aside for emergencies, retirement, and financial goals amongst other things.</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <a class="btn btn-primary" href="/static/Finance_Tips.html" role="button">Know More!🧠</a>
+            </div>  
+            <div>
+              
+            </div>  
+
+
+
+
+
+
+        <!--<p>Needs</p>
+            <label for ="numberInput1">Housing:</label>
+            <input type="number" id="numberInput1" placeholder="Enter a number">
+
+            <label for ="numberInput2">Transportation:</label>
+            <input type="number" id="numberInput2" placeholder="Enter a number">
+
+            <label for ="numberInput3">Groceries:</label>
+            <input type="number" id="numberInput3" placeholder="Enter a number">
+
+            <label for ="numberInput4">Enter a number:</label>
+            <input type="number" id="numberInput4" placeholder="Enter a number">
+
+            <button onclick="calculateAll()">Done!</button>   Button to trigger the calculation -->
 </body>
