--- a/static/Budgeting.html
+++ b/static/Budgeting.html
@@ -137,10 +137,9 @@
                         </div>
                       </div>
                       <div class="card-body">
-                        <h5 class="card-title">How to Budget</h5>
-                        <p id="num1" class="card-text">Calculator on your own personal<br><i><b>income</b></i> and <i><b>saving goals</b></i>.</p>
+                        <p id="num2" class="card-text">Calculator on your own personal<br><i><b>income</b></i> and <i><b>saving goals</b></i>.</p>
                         <p id="num1">Needs Total: <span id="ntresult" class="result"></span></p>
-                        <p id="exceedsMessage" class="message"></p>
+                        <p id ="num1"><span id="exceedsMessage" class="message"></span></p>
                         <script src="/calculations/BudgetCalc.js"></script>
                       </div>
                     </div>
@@ -152,10 +151,9 @@
                           Fun Money
                       </div>
                       <div class="card-body">
-                        <h5 class="card-title">Calculate your credit</h5>
-                        <p id="num1" class="card-text">fgsgssg fgdfsgnj ksnjkngsgsd.</p>
+                        <p id="num2" class="card-text">fgsgssg fgdfsgnj ksnjkngsgsd.</p>
                         <p id="num1">Wants Total: <span id="wtresult" class="result"></span></p>
-                        <p id="exceedsMessage" class="message"></p>
+                        <p id ="num1"><span id="exceedsMessage" class="message"></span></p>
                         <script src="/calculations/BudgetCalc.js"></script>
                       </div>
                     </div>
@@ -167,10 +165,9 @@
                         Savings
                       </div>
                       <div class="card-body" >
-                        <h5 class="card-title">Finance terminology</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                        <p id = "num2" class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                         <p id="num1">Savings Total: <span id="stresult" class="result"></span></p>
-                        <p id="exceedsMessage" class="message"></p>
+                        <p id ="num1"><span id="exceedsMessage" class="message"></span></p>
 
                         <script src="/calculations/BudgetCalc.js"></script>
 
@@ -181,7 +178,8 @@
               </div>
           </div>  
           <div>
-            
+            <p id="num1">There are many different methods that can help you budget properly. Click the button below to find the right one for you!</p>
+            <a id = "btn" class="btn btn-primary" href="/static/Finance_Tips.html" role="button">Know More!🧠</a>
           </div>  
 
 
