add images, formatted, deleted stuffs

--- a/static/Credit_Info.html
+++ b/static/Credit_Info.html
@@ -12,16 +12,26 @@
 <body>
 
     <nav id="desktop-nav">
-        <div>
-            <ul class="nav-links">
-                <a href="#budgeting">Budgeting</a></li>
-                <a href="#understandingcredit">Understanding Credit</a></li>
-                <a href="#why">Why?</a></li>
-            </ul>
+        <div class="nav-links">
+                <a href="/static/index.html" style="background: rgb(0, 178, 53);">Home Page</a>
+                <a href="#budgeting">Budgeting</a>
+                <a href="#understandingcredit">Understanding Credit</a>
+                <a href="#why">Why?</a>
         </div>
     </nav>
 
-    <section id="Budgeting">
+
+    <div class="container">
+        <img src="https://st2.depositphotos.com/4352269/7427/v/950/depositphotos_74276339-stock-illustration-personal-finance-financial-plan-family.jpg" class="image" style="width:100%;">
+        <div class="bottom-left">Bottom Left</div>
+        <div class="top-left">Top Left</div>
+        <div class="top-right">Top Right</div>
+        <div class="bottom-right">Bottom Right</div>
+        <div class="centered">Centered</div>
+      </div>
+
+
+    <section id="budgeting">
         <div class="budgeting-container">
             <h3>What Is Budgeting?</h3>
             <p>
@@ -33,7 +43,7 @@
                 toys, or saving for something special, so they don’t run out too fast! It helps them make sure 
                 they have enough for what they need and want.
             </p>
-
+            <br><br>
             <h3>Why Is Budgeting Important?</h3>
             <p>
                 Budgeting is important because it helps you make sure you don't run out of money, just like if 
@@ -45,7 +55,7 @@
                 worry about running out!
 
             </p>
-
+            <br><br>
             <h3>Different Items To Include In A Budget</h3>
             <p>
                 When making a budget, you can include different things, just like when you plan what to do 
@@ -63,7 +73,7 @@
 
         </div>
     </section>
-
+    <br><br>
 
     <section id="understandingcredit">
         <div class="credit-container">
@@ -77,7 +87,7 @@
                 but you have to pay it back later. If you’re good at paying it back, people will trust you more, 
                 just like if you always return your friend's toy on time!
             </p>
-
+            <br><br>
             <h3>Is Credit Important?</h3>
             <p>
                 Yes, credit is important! It helps people get things they need when they don’t have all the 
@@ -89,7 +99,7 @@
                 or the money on time, it can make it harder to borrow again. So, good credit helps with future 
                 plans!
             </p>
-
+            <br><br>
             <h3>Important Habits To Keep!</h3>
             <p>
                 Building good habits with credit is essential for managing your finances and maintaining a 
@@ -112,7 +122,7 @@
             </p>
         </div>
     </section>
-
+    <br><br>
     <section id="why">
         <div class="why-container">
             <h3>How are budgeting and credit aligned?</h3>
