--- a/static/Finance_Tips.html
+++ b/static/Finance_Tips.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="nav">
-    <a href="/static/homePage.html" style="background: rgb(0, 178, 53);">Home Page</a>
+    <a href="/static/index.html" style="background: rgb(0, 178, 53);">Home Page</a>
     <a href="#intro-to-budgeting">Intro to Budgeting</a>
     <a href="#zeroBased">Zero Based Budgeting</a>
     <a href="#fifty-thirty-twenty">50-30-20 Budgeting</a>
