--- a/static/index.html
+++ b/static/index.html
@@ -43,10 +43,10 @@
           <div class="col">
             <div class="card">
                 <div class="card-header" class="colored">
-                    Credit Information
+                    Quick Budget & Credit Information
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title">Calculate your credit</h5>
+                  <h5 class="card-title">Budget & Credit Information</h5>
                   <p class="card-text">fgsgssg fgdfsgnj ksnjkngsgsd.</p>
                   <a class="btn btn-primary" href="/static/Credit_Info.html" role="button">Lets Go!😎</a>
                 </div>
