--- a/static/index.html
+++ b/static/index.html
@@ -18,11 +18,6 @@
     <h1>Financial Literacy</h1>
     <p>Know how to handle your money</p>
     <br>
-    <form action="/action_page.php">
-      <label for="fname">hr rate</label><br>
-      <input type="text" id="fname" value="$per-hr"><br><br>
-      <input type="submit" value="Submit">
-    </form>
     <div class="container text-center">
         <div class="row">
           <div class="col">
@@ -47,7 +42,7 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Budget & Credit Information</h5>
-                  <p class="card-text">fgsgssg fgdfsgnj ksnjkngsgsd.</p>
+                  <p class="card-text">Undestand what budgeting & credit is and why are they important!</p>
                   <a class="btn btn-primary" href="/static/Credit_Info.html" role="button">Lets Go!😎</a>
                 </div>
               </div>
@@ -59,7 +54,7 @@
                 </div>
                 <div class="card-body" >
                   <h5 class="card-title">Finance terminology</h5>
-                  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">What are some budgeting tips and guides to use :)</p>
                   <a class="btn btn-primary" href="/static/Finance_Tips.html" role="button">Know More!🧠</a>
                 </div>
               </div>
