changes to budgethtml

--- a/static/Budgeting.html
+++ b/static/Budgeting.html
@@ -11,7 +11,7 @@
 
 <div class="nav">
   <a href="/static/index.html" style="background: rgb(0, 178, 53);">Home Page</a>
-  <a href="#beginning"">Start</a>
+  <a href="#numberInput"">Start</a>
   <a href="#reg">Spending needs, Wants,& Savings</a>
   <a href="#numberInput">Calculator</a>
   <a href="#"></a>
@@ -125,7 +125,7 @@
       </div> <br>
     <button id="btn1" onclick="calculateAll()">Calculate!🤯</button>  <!-- Button to trigger the calculation -->
     </div>
-  </div>  middle#
+  </div>  num1#numberInput1
 
   <div class="container text-center">
     <div class="row">
@@ -136,7 +136,7 @@
             </div>
             <div class="card-body">
               <p id="num2" class="card-text">Based on the outcome of your total expenses, you can see were you would need to start adjusting your budget!</p>
-              <p id="num1">Needs Total: <span id="ntresult" class="result"></span></p>
+              <p id="num1"><i><b>Needs Total:</b></i><span id="ntresult" class="result"></span></p>
               <p id="num1">Your Total should not exceed your needs Budget</p>
               <script src="/calculations/BudgetCalc.js"></script>
             </div>
@@ -148,7 +148,7 @@
         <div class="card-header" >Fun Money</div>
           <div class="card-body">
             <p id="num2" class="card-text">A tip for savings is to aim for three to six months' worth of living expenses in an emergency fund.</p>
-            <p id="num1">Wants Total: <span id="wtresult" class="result"></span></p>
+            <p id="num1"><i><b>Wants Total:</b></i> <span id="wtresult" class="result"></span></p>
             <p id="num1">If your Total equal to or below your wants budget you are on the right track!</p>
             <script src="/calculations/BudgetCalc.js"></script>
           </div>
@@ -160,7 +160,7 @@
           <div class="card-header"> Savings </div>
             <div class="card-body">
               <p id="num2" class="card-text">Did you know that in America almost 3 in 10 (29%) of people have some savings, but not enough to cover three months' expenses.</p>
-              <p id="num1">Savings Total: <span id="stresult" class="result"></span></p>
+              <p id="num1"><i><b>Savings Total:</b></i> <span id="stresult" class="result"></span></p>
               <p id="num1">It is best to always equal your Savings to saving budget</p>
 
               <script src="/calculations/BudgetCalc.js"></script>
