Changes maded to budget

--- a/static/Budgeting.html
+++ b/static/Budgeting.html
@@ -125,7 +125,7 @@
       </div> <br>
     <button id="btn1" onclick="calculateAll()">Calculate!🤯</button>  <!-- Button to trigger the calculation -->
     </div>
-  </div>  num1#numberInput1
+  </div>  num1#calculator<div id="calculator"></div>
 
   <div class="container text-center">
     <div class="row">
@@ -136,7 +136,7 @@
             </div>
             <div class="card-body">
               <p id="num2" class="card-text">Based on the outcome of your total expenses, you can see were you would need to start adjusting your budget!</p>
-              <p id="num1"><i><b>Needs Total:</b></i><span id="ntresult" class="result"></span></p>
+              <p id="num1"><i><b>Needs Total: </b></i><span id="ntresult" class="result"></span></p>
               <p id="num1">Your Total should not exceed your needs Budget</p>
               <script src="/calculations/BudgetCalc.js"></script>
             </div>
