--- a/static/Budgeting.html
+++ b/static/Budgeting.html
@@ -93,7 +93,7 @@
     <br>
     
     <div class="col">
-      <div class="colom">
+      <div >
         <h2>Wants Budget</h2>
         <p id="num1">Enter the <br><i><b>expenses</b></i> that are <i><b>not important</b></i>, items that you <i><b>want</b></i>.</p>
         <label for ="numberInput5">Games:</label>
@@ -106,8 +106,7 @@
         <input type="number" id="numberInput7" placeholder="Enter a number">
 
       </div><br>
-      <div class="card">
-        <div class="card-header">Savings</div>
+      <div >
         <div class="card-body">
           <h2 class="card-title">Savings Budget</h2>
             <p id="num1" class="card-text">Enter how much money is <i><b>put aside</b></i> for <i><b>emergencies</b></i>, <i><b>retirement</b></i>, and <i><b>financial goals</b></i> amongst other things.</p>
@@ -125,7 +124,7 @@
       </div> <br>
     <button id="btn1" onclick="calculateAll()">Calculate!🤯</button>  <!-- Button to trigger the calculation -->
     </div>
-  </div>  num1#calculator<div id="calculator"></div>
+  </div>
 
   <div class="container text-center">
     <div class="row">
